# hsSimpleStats

./: README.md  hsSimpleStats.cabal
src/SimpleStats/: Boxplot.hs  CDF.hs
test/: Tests.hs
test/SimpleStats/Tests/: Basic.hs
